--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Dictionary</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="search-box">
+            <input type="text" placeholder="Search Here..." id="input">
+            <button id="searchBtn">Search</button>
+        </div>
+    </div>
 </body>
 </html>
