--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title>Dictionary</title>
@@ -12,6 +13,14 @@
         <div class="search-box">
             <input type="text" placeholder="Search Here..." id="input">
             <button id="searchBtn">Search</button>
+        </div>
+        <div class="result">
+            <div class="word">
+                <h3>Sample</h3>
+                <button>
+                    <i class="fas fa-volume-up"></i>
+                </button>
+            </div>
         </div>
     </div>
 </body>
