--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Dictionary</title>
 </head>
 <body>
+    <audio id="sound"></audio>
     <div class="container">
         <div class="search-box">
             <input type="text" placeholder="Search Here..." id="input">
@@ -21,6 +22,16 @@
                     <i class="fas fa-volume-up"></i>
                 </button>
             </div>
+            <div class="detail">
+                <p>pos</p>
+                <p>/sample/</p>
+            </div>
+            <p class="definition">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, dolorem?
+            </p>
+            <p class="example">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, dolorem?
+            </p>
         </div>
     </div>
 </body>
