--- a/index.html
+++ b/index.html
@@ -17,21 +17,24 @@
         </div>
         <div class="result">
             <div class="word">
-                <h3>Sample</h3>
-                <button>
-                    <i class="fas fa-volume-up"></i>
-                </button>
+                <h3>
+                    Sample
+                </h3>
+                <div class="btn-group">
+                    <button>
+                        <i class="fas fa-volume-up"></i>
+                    </button>
+                    <button class="switchBtn">
+                        <i class="fas fa-recycle"></i>
+                    </button>
+                </div>
             </div>
             <div class="detail">
-                <p>pos</p>
-                <p>/sample/</p>
+                <p></p>
+                <p></p>
             </div>
-            <p class="definition">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, dolorem?
-            </p>
-            <p class="example">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, dolorem?
-            </p>
+            <p class="definition"></p>
+            <p class="example"></p>
         </div>
     </div>
 </body>
